# milestone-4-Gustitreshana

./: README.md
Banking_app/: pyproject.toml  table.sql
Banking_app/app/: __init__.py
Banking_app/app/connectors/: mysql_connector.py
Banking_app/app/controllers/: account_management_route.py  transaction_management_route.py  user_management_route.py
Banking_app/app/models/: account.py  base.py  transaction.py  user.py
Banking_app/tests/: test_account.py  test_transaction.py  test_user.py
