[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Gustitreshana <gustith2105@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.28"
flask = "^3.0.2"
flask-jwt-extended = "^4.6.0"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
bcrypt = "^4.1.2"
mysql-connector-python = "^8.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
